namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-jobs-board-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-jobs-board-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "prison-education"
    cloud-platform.justice.gov.uk/application: "Jobs Board"
    cloud-platform.justice.gov.uk/owner: "Education Skills Work and Employment: managing.eswe@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-jobs-board-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-education-skills-and-work"
    cloud-platform.justice.gov.uk/review-after: ""
